--- a/index.html
+++ b/index.html
@@ -236,20 +236,25 @@
     </div>
   </div>
 
-  <!-- ORDEN CORRECTO DE SCRIPTS -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1"></script>
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-<!-- >>> define aquí la URL remota del MOV <<<< -->
-<script>
-  window.PV6_MOV_REMOTE_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vR_Rp6f-Xdv6RyWXQhY0uV1E5P3PBQpjMJIVrxeRAq4RCYMEzlqWY24Jltqstcp3uV79moaJc63d4cf/pub?gid=0&single=true&output=csv';
-</script>
-  <!-- Parche remoto: DEBE ir después de PapaParse y ANTES de app.v6.js -->
-  <script src="pv6_mov_remote_patch.js?v=1.1"></script>
+<!-- ORDEN CORRECTO DE SCRIPTS -->
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1"></script>
+<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
-  <script src="app.v6.js?v=V6"></script>
-  <!-- ADDON M1: sin manejo (simulador, export, exclusiones) -->
-  <script src="pv6_m1_addon.js?v=1"></script>
-  <script src="pv6_m2_addon.js?v=2.2"></script>
-</body>
-</html>
+<!-- Define aquí la URL remota del MOV (Google Sheets publicado como CSV) -->
+<script>
+  // Pega tu URL publicada que termina en output=csv
+  window.PV6_MOV_REMOTE_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR_Rp6f-Xdv6RyWXQhY0uV1E5P3PBQpjMJIVrxeRAq4RCYMEzlqWY24Jltqstcp3uV79moaJc63d4cf/pub?gid=0&single=true&output=csv";
+</script>
+
+<!-- Parche remoto: DESPUÉS de PapaParse y ANTES de app.v6.js -->
+<script src="pv6_mov_remote_patch.js?v=1.3"></script>
+
+<!-- Core y addons -->
+<script src="app.v6.js?v=V6"></script>
+<script src="pv6_m1_addon.js?v=1"></script>
+<script src="pv6_m2_addon.js?v=2.2"></script>
+
+<!-- (Opcional) evita el 404 del favicon -->
+<link rel="icon" href="data:,">
+
