--- a/index.html
+++ b/index.html
@@ -253,14 +253,17 @@
     }
  </script>
 
-<!-- Parche MOV remoto (intercepta CSV) -->
+<!-- Parche remoto MOV -->
 <script src="pv6_mov_remote_patch.js?v=2.0"></script>
 
 <!-- App base -->
 <script src="app.v6.js?v=V6"></script>
 
-<!-- Parche M3: FDN (120/FDN) + desperdicio por curva -->
+<!-- M3: FDN + desperdicio -->
 <script src="pv6_m3_fdn_waste_patch.js?v=3.0"></script>
+
+<!-- M2.15: Pastoreo con manejo (auto-inserta el card) -->
+<script src="pv6_m2_addon.js?v=2.15"></script>
 
 <!-- Addons -->
 <script src="pv6_m1_addon.js?v=1"></script>
