--- a/index.html
+++ b/index.html
@@ -259,14 +259,13 @@
 <!-- App base -->
 <script src="app.v6.js?v=V6"></script>
 
-<!-- M3: FDN + desperdicio -->
+<!-- M3: FDN + desperdicio (120/FDN + desperdicio) -->
 <script src="pv6_m3_fdn_waste_patch.js?v=3.0"></script>
 
-<!-- M2.15: Pastoreo con manejo (auto-inserta el card) -->
-<script src="pv6_m2_addon.js?v=2.15"></script>
-
-<!-- Addons -->
+<!-- M1: Addon original (siempre va) -->
 <script src="pv6_m1_addon.js?v=1"></script>
-<script src="pv6_m2_addon.js?v=2.2"></script>
+
+<!-- M2.16: Pastoreo con manejo (RENOMBRADO para romper cachés) -->
+<script src="pv6_m2_addon_v216.js?v=1"></script>
 </body>
 </html>
