--- a/index.html
+++ b/index.html
@@ -253,19 +253,13 @@
     }
  </script>
 
-<!-- Parche remoto MOV -->
+<!-- Parche MOV (remoto) -->
 <script src="pv6_mov_remote_patch.js?v=2.0"></script>
 
-<!-- App base -->
+<!-- Núcleo -->
 <script src="app.v6.js?v=V6"></script>
 
-<!-- M3: FDN + desperdicio (120/FDN + desperdicio) -->
-<script src="pv6_m3_fdn_waste_patch.js?v=3.0"></script>
-
-<!-- M1: Addon original (siempre va) -->
-<script src="pv6_m1_addon.js?v=1"></script>
-
-<!-- M2.16: Pastoreo con manejo (RENOMBRADO para romper cachés) -->
-<script src="pv6_m2_addon_v216.js?v=1"></script>
+<!-- ÚNICO addon estable M2.16 -->
+<script src="pv6_m2_addon_v216.js?v=1.0"></script>
 </body>
 </html>
