--- a/index.html
+++ b/index.html
@@ -252,7 +252,9 @@
       });
     }
  </script>
-
+<script>
+  window.__PV6_SHEETS_MOV_URL__ = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR_Rp6f-Xdv6RyWXQhY0uV1E5P3PBQpjMJIVrxeRAq4RCYMEzlqWY24Jltqstcp3uV79moaJc63d4cf/pub?gid=0&single=true&output=csv";
+</script>
 <!-- Parche MOV (remoto) -->
 <script src="pv6_mov_remote_patch.js?v=2.0"></script>
 
