--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
+
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Demo V6 – Ganadería Satelital (Pastoreo PV6)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <link rel="stylesheet" href="style.css" />
-  <style>
+<meta charset="utf-8"/>
+<title>Demo V6 – Ganadería Satelital (Pastoreo PV6)</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<link href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" rel="stylesheet"/>
+<link href="style.css" rel="stylesheet"/>
+<style>
     /* (Tu CSS inline actual tal cual) */
     .legend{background:#fff;border:1px solid #e5e7eb;border-radius:10px;padding:8px 10px;font-size:12px;color:#374151;box-shadow:0 8px 20px rgba(0,0,0,.08)}
     .legend .item{display:flex;align-items:center;gap:6px;margin:4px 0}
@@ -56,191 +57,181 @@
   </style>
 </head>
 <body>
-  <!-- (Tu cuerpo tal cual) -->
-  <header class="topbar">
-    <div class="brand">
-      <span class="logo">🌿</span>
-      <div class="brand-txt">
-        <strong>Demo V6</strong>
-        <small>Modelo Ético Pastoril · Kg MS/ha</small>
-      </div>
-    </div>
-    <div class="kpis kpis-finca">
-      <div class="kpi"><div class="kpi-label">Kg MS/ha ponderado (Finca)</div><div id="kpi-biomasa-finca" class="kpi-value">–</div></div>
-      <div class="kpi"><div class="kpi-label">Área total (Finca)</div><div id="kpi-area-finca" class="kpi-value">–</div></div>
-      <div class="kpi"><div class="kpi-label">UA efectiva (Finca)</div><div id="kpi-ua-finca" class="kpi-value">–</div></div>
-      <div class="kpi"><div class="kpi-label">Oferta utilizable (Finca)</div><div id="kpi-oferta-finca" class="kpi-value">–</div></div>
-      <div class="kpi"><div class="kpi-label">Demanda diaria (Finca)</div><div id="kpi-demanda-finca" class="kpi-value">–</div></div>
-      <div class="kpi"><div class="kpi-label">Días recomendados (Finca)</div><div id="kpi-dias-finca" class="kpi-value">–</div></div>
-    </div>
-  </header>
-
-  <section class="kpis kpis-potrero">
-    <div class="kpi"><div class="kpi-label">Potrero seleccionado</div><div id="kpi-potrero-nombre" class="kpi-value">—</div></div>
-    <div class="kpi"><div class="kpi-label">Kg MS/ha (Potrero)</div><div id="kpi-biomasa-pot" class="kpi-value">—</div></div>
-    <div class="kpi"><div class="kpi-label">Área (ha)</div><div id="kpi-area-pot" class="kpi-value">—</div></div>
-    <div class="kpi"><div class="kpi-label">UA efectiva (Potrero)</div><div id="kpi-ua-pot" class="kpi-value">—</div></div>
-    <div class="kpi"><div class="kpi-label">Oferta utilizable (Potrero)</div><div id="kpi-oferta-pot" class="kpi-value">—</div></div>
-    <div class="kpi"><div class="kpi-label">Días recomendados (Potrero)</div><div id="kpi-dias-pot" class="kpi-value">—</div></div>
-  </section>
-
-  <section class="toolbar">
-    <div class="row">
-      <div>
-        <label>Fecha: desde</label>
-        <input type="date" id="date-start" />
-      </div>
-      <div>
-        <label>hasta</label>
-        <input type="date" id="date-end" />
-      </div>
-      <div>
-        <label>Potreros</label>
-        <select id="pot-select">
-          <option value="__ALL__">Todos (finca)</option>
-          <option value="__PADRES__">Padres</option>
-        </select>
-      </div>
-      <div>
-        <label>Overlay</label>
-        <select id="overlay">
-          <option value="biomasa" selected>Kg MS/ha</option>
-          <option value="kg_proj">Kg proyectado (consumo)</option>
-          <option value="estado">Estado (pastoreo)</option>
-          <option value="descanso">Descanso (días)</option>
-          <option value="pet0">P–ET₀ (mm, 7d)</option>
-        </select>
-      </div>
-      <div>
-        <label>Fuente</label>
-        <select id="fuente">
-          <option value="smoothed" selected>kgms_7d</option>
-          <option value="raw">kgms_raw</option>
-        </select>
-      </div>
-      <div>
-        <label>Modo manejo</label>
-        <select id="mode">
-          <option value="eq" selected>Equilibrado</option>
-          <option value="gain">Ganancia Animal</option>
-          <option value="etico">Ético Pastoril</option>
-        </select>
-      </div>
-      <div>
-        <label>Coef. uso (%)</label>
-        <input type="number" id="coef-uso" value="60" min="0" max="100" step="1" />
-      </div>
-      <div>
-        <label>Consumo base (kg/UA/d)</label>
-        <input type="number" id="consumo" value="10" min="0" step="0.1" />
-      </div>
-      <button id="btn-apply" class="btn">Aplicar</button>
-      <button id="btn-params" class="btn">Parámetros</button>
-      <button id="btn-export-day" class="btn">Exportar CSV (día)</button>
-      <button id="btn-exc" class="btn secondary">Exclusiones</button>
-    </div>
-  </section>
-
-  <main class="main">
-    <div id="map"></div>
-
-    <aside class="side">
-      <section class="pastoreo-dynamic">
-        <div>
-          <div class="pill state-green">Ocupados</div>
-          <div id="chips-green" class="chips"></div>
-        </div>
-        <div>
-          <div class="pill">Libres calificados</div>
-          <div id="chips-yellow" class="chips"></div>
-        </div>
-      </section>
-
-      <div class="card" id="sim-card">
-        <div class="card-header">
-          <h4>Simular pastoreo (sin manejo)</h4>
-        </div>
-        <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:8px;padding:0 8px 8px 8px">
-          <label>PV total (kg)<input type="number" id="sim-pv" min="0" step="1" /></label>
-          <label>UA<input type="number" id="sim-ua" min="0" step="0.1" /></label>
-          <label>N total<input type="number" id="sim-n" min="0" step="1" /></label>
-        </div>
-        <div style="display:flex;gap:8px;padding:0 8px 10px 8px">
-          <button id="btn-sim-run" class="btn">Simular</button>
-          <button id="btn-sim-export" class="btn secondary">Descargar CSV (Top sugeridos)</button>
-        </div>
-        <div class="table-wrap" style="max-height:28vh;overflow:auto;margin:0 8px 10px 8px">
-          <table class="rank">
-            <thead>
-              <tr>
-                <th>Potrero</th>
-                <th>Kg MS/ha</th>
-                <th>Días br. (est)</th>
-                <th>Días aj. (est)</th>
-                <th>Estado</th>
-              </tr>
-            </thead>
-            <tbody id="sim-body"></tbody>
-          </table>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>Serie temporal (Kg MS/ha & P–ETo)</h3>
-          <button id="expand-chart" class="btn secondary">Expandir</button>
-        </div>
-        <div class="chart-wrap">
-          <canvas id="timeseries"></canvas>
-        </div>
-      </div>
-
-      <div class="panel">
-        <div class="card-header">
-          <h4>Ranking de potreros (Pastoreo)</h4>
-        </div>
-        <div class="table-wrap" style="max-height:40vh;overflow:auto;padding:4px 8px">
-          <table class="rank">
-            <thead>
-              <tr>
-                <th>Potrero</th>
-                <th>Kg MS/ha</th>
-                <th>Pend.7d</th>
-                <th>FND</th>
-                <th>Descanso</th>
-                <th>Entrada</th>
-                <th>Días br.</th>
-                <th>Días aj.</th>
-                <th>Estado</th>
-                <th>Incl.</th>
-              </tr>
-            </thead>
-            <tbody id="rank-body"></tbody>
-          </table>
-        </div>
-      </div>
-    </aside>
-  </main>
-
-  <div id="exc-modal">
-    <div class="backdrop"></div>
-    <div class="card">
-      <h4>Excluir potreros del análisis</h4>
-      <div id="exc-list"></div>
-      <div style="display:flex;justify-content:flex-end;gap:8px;margin-top:10px">
-        <button id="exc-cancel" class="btn">Cancelar</button>
-        <button id="exc-save" class="btn">Guardar</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Libs -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1"></script>
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-
-  <!-- REGISTRO SW (nuevo) -->
-  <script>
+<!-- (Tu cuerpo tal cual) -->
+<header class="topbar">
+<div class="brand">
+<span class="logo">🌿</span>
+<div class="brand-txt">
+<strong>Demo V6</strong>
+<small>Modelo Ético Pastoril · Kg MS/ha</small>
+</div>
+</div>
+<div class="kpis kpis-finca">
+<div class="kpi"><div class="kpi-label">Kg MS/ha ponderado (Finca)</div><div class="kpi-value" id="kpi-biomasa-finca">–</div></div>
+<div class="kpi"><div class="kpi-label">Área total (Finca)</div><div class="kpi-value" id="kpi-area-finca">–</div></div>
+<div class="kpi"><div class="kpi-label">UA efectiva (Finca)</div><div class="kpi-value" id="kpi-ua-finca">–</div></div>
+<div class="kpi"><div class="kpi-label">Oferta utilizable (Finca)</div><div class="kpi-value" id="kpi-oferta-finca">–</div></div>
+<div class="kpi"><div class="kpi-label">Demanda diaria (Finca)</div><div class="kpi-value" id="kpi-demanda-finca">–</div></div>
+<div class="kpi"><div class="kpi-label">Días recomendados (Finca)</div><div class="kpi-value" id="kpi-dias-finca">–</div></div>
+</div>
+</header>
+<section class="kpis kpis-potrero">
+<div class="kpi"><div class="kpi-label">Potrero seleccionado</div><div class="kpi-value" id="kpi-potrero-nombre">—</div></div>
+<div class="kpi"><div class="kpi-label">Kg MS/ha (Potrero)</div><div class="kpi-value" id="kpi-biomasa-pot">—</div></div>
+<div class="kpi"><div class="kpi-label">Área (ha)</div><div class="kpi-value" id="kpi-area-pot">—</div></div>
+<div class="kpi"><div class="kpi-label">UA efectiva (Potrero)</div><div class="kpi-value" id="kpi-ua-pot">—</div></div>
+<div class="kpi"><div class="kpi-label">Oferta utilizable (Potrero)</div><div class="kpi-value" id="kpi-oferta-pot">—</div></div>
+<div class="kpi"><div class="kpi-label">Días recomendados (Potrero)</div><div class="kpi-value" id="kpi-dias-pot">—</div></div>
+</section>
+<section class="toolbar">
+<div class="row">
+<div>
+<label>Fecha: desde</label>
+<input id="date-start" type="date"/>
+</div>
+<div>
+<label>hasta</label>
+<input id="date-end" type="date"/>
+</div>
+<div>
+<label>Potreros</label>
+<select id="pot-select">
+<option value="__ALL__">Todos (finca)</option>
+<option value="__PADRES__">Padres</option>
+</select>
+</div>
+<div>
+<label>Overlay</label>
+<select id="overlay">
+<option selected="" value="biomasa">Kg MS/ha</option>
+<option value="kg_proj">Kg proyectado (consumo)</option>
+<option value="estado">Estado (pastoreo)</option>
+<option value="descanso">Descanso (días)</option>
+<option value="pet0">P–ET₀ (mm, 7d)</option>
+</select>
+</div>
+<div>
+<label>Fuente</label>
+<select id="fuente">
+<option selected="" value="smoothed">kgms_7d</option>
+<option value="raw">kgms_raw</option>
+</select>
+</div>
+<div>
+<label>Modo manejo</label>
+<select id="mode">
+<option selected="" value="eq">Equilibrado</option>
+<option value="gain">Ganancia Animal</option>
+<option value="etico">Ético Pastoril</option>
+</select>
+</div>
+<div>
+<label>Coef. uso (%)</label>
+<input id="coef-uso" max="100" min="0" step="1" type="number" value="60"/>
+</div>
+<div>
+<label>Consumo base (kg/UA/d)</label>
+<input id="consumo" min="0" step="0.1" type="number" value="10"/>
+</div>
+<button class="btn" id="btn-apply">Aplicar</button>
+<button class="btn" id="btn-params">Parámetros</button>
+<button class="btn" id="btn-export-day">Exportar CSV (día)</button>
+<button class="btn secondary" id="btn-exc">Exclusiones</button>
+</div>
+</section>
+<main class="main">
+<div id="map"></div>
+<aside class="side">
+<section class="pastoreo-dynamic">
+<div>
+<div class="pill state-green">Ocupados</div>
+<div class="chips" id="chips-green"></div>
+</div>
+<div>
+<div class="pill">Libres calificados</div>
+<div class="chips" id="chips-yellow"></div>
+</div>
+</section>
+<div class="card" id="sim-card">
+<div class="card-header">
+<h4>Simular pastoreo (sin manejo)</h4>
+</div>
+<div style="display:grid;grid-template-columns:repeat(3,1fr);gap:8px;padding:0 8px 8px 8px">
+<label>PV total (kg)<input id="sim-pv" min="0" step="1" type="number"/></label>
+<label>UA<input id="sim-ua" min="0" step="0.1" type="number"/></label>
+<label>N total<input id="sim-n" min="0" step="1" type="number"/></label>
+</div>
+<div style="display:flex;gap:8px;padding:0 8px 10px 8px">
+<button class="btn" id="btn-sim-run">Simular</button>
+<button class="btn secondary" id="btn-sim-export">Descargar CSV (Top sugeridos)</button>
+</div>
+<div class="table-wrap" style="max-height:28vh;overflow:auto;margin:0 8px 10px 8px">
+<table class="rank">
+<thead>
+<tr>
+<th>Potrero</th>
+<th>Kg MS/ha</th>
+<th>Días br. (est)</th>
+<th>Días aj. (est)</th>
+<th>Estado</th>
+</tr>
+</thead>
+<tbody id="sim-body"></tbody>
+</table>
+</div>
+</div>
+<div class="card">
+<div class="card-header">
+<h3>Serie temporal (Kg MS/ha &amp; P–ETo)</h3>
+<button class="btn secondary" id="expand-chart">Expandir</button>
+</div>
+<div class="chart-wrap">
+<canvas id="timeseries"></canvas>
+</div>
+</div>
+<div class="panel">
+<div class="card-header">
+<h4>Ranking de potreros (Pastoreo)</h4>
+</div>
+<div class="table-wrap" style="max-height:40vh;overflow:auto;padding:4px 8px">
+<table class="rank">
+<thead>
+<tr>
+<th>Potrero</th>
+<th>Kg MS/ha</th>
+<th>Pend.7d</th>
+<th>FND</th>
+<th>Descanso</th>
+<th>Entrada</th>
+<th>Días br.</th>
+<th>Días aj.</th>
+<th>Estado</th>
+<th>Incl.</th>
+</tr>
+</thead>
+<tbody id="rank-body"></tbody>
+</table>
+</div>
+</div>
+<section class="card" id="pv6-manejo-card"></section></aside>
+</main>
+<div id="exc-modal">
+<div class="backdrop"></div>
+<div class="card">
+<h4>Excluir potreros del análisis</h4>
+<div id="exc-list"></div>
+<div style="display:flex;justify-content:flex-end;gap:8px;margin-top:10px">
+<button class="btn" id="exc-cancel">Cancelar</button>
+<button class="btn" id="exc-save">Guardar</button>
+</div>
+</div>
+</div>
+<!-- Libs -->
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1"></script>
+<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+<!-- REGISTRO SW (nuevo) -->
+<script>
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker.register("./sw_mov_remote.js?ver=1").then(() => {
         console.log("[MOV][sw] registrado");
@@ -252,15 +243,10 @@
       });
     }
  </script>
-<script>
-  window.__PV6_SHEETS_MOV_URL__ = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR_Rp6f-Xdv6RyWXQhY0uV1E5P3PBQpjMJIVrxeRAq4RCYMEzlqWY24Jltqstcp3uV79moaJc63d4cf/pub?gid=0&single=true&output=csv";
-</script>
 <!-- Parche MOV (remoto) -->
-<script src="pv6_mov_remote_patch.js?v=2.0"></script>
-
+<script>window.__PV6_SHEETS_MOV_URL__ = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR_Rp6f-Xdv6RyWXQhY0uV1E5P3PBQpjMJIVrxeRAq4RCYMEzlqWY24Jltqstcp3uV79moaJc63d4cf/pub?gid=0&single=true&output=csv";</script><script src="pv6_mov_remote_patch.js?v=2.0"></script>
 <!-- Núcleo -->
 <script src="app.v6.js?v=V6"></script>
-
 <!-- ÚNICO addon estable M2.16 -->
 <script src="pv6_m2_addon_v216.js?v=1.0"></script>
 </body>
