--- a/index.html
+++ b/index.html
@@ -244,19 +244,14 @@
     }
  </script>
 <!-- Parche MOV (remoto) -->
-<script>window.__PV6_SHEETS_MOV_URL__ = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR_Rp6f-Xdv6RyWXQhY0uV1E5P3PBQpjMJIVrxeRAq4RCYMEzlqWY24Jltqstcp3uV79moaJc63d4cf/pub?gid=0&single=true&output=csv";</script><script src="pv6_mov_remote_patch.js?v=2.0"></script>
+<script>window.__PV6_SHEETS_MOV_URL__ = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR_Rp6f-Xdv6RyWXQhY0uV1E5P3PBQpjMJIVrxeRAq4RCYMEzlqWY24Jltqstcp3uV79moaJc63d4cf/pub?gid=0&single=true&output=csv";</script>
+<script src="pv6_mov_remote_patch.js?v=3.0"></script>
+
 <!-- Núcleo -->
 <script src="app.v6.js?v=V6"></script>
-<!-- ÚNICO addon estable M2.16 -->
 
-<script src="pv6_m2_addon_v216.js?v=2.2"></script><!-- Injector para pv6_m2_addon_v216_FORCE -->
-<script>
-(function(){
-  var s = document.createElement('script');
-  s.src = 'pv6_m2_addon_v216_FORCE.js?v=' + Date.now();
-  document.body.appendChild(s);
-})();
-</script>
+<!-- Addon manejo PV6 -->
+<script src="pv6_m2_addon_v216.js?v=3.0"></script>
 
 </body>
 </html>
