--- a/index.html
+++ b/index.html
@@ -233,14 +233,30 @@
 <!-- REGISTRO SW (nuevo) -->
 
 <!-- Parche MOV (remoto) -->
-<script>window.__PV6_SHEETS_MOV_URL__ = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR_Rp6f-Xdv6RyWXQhY0uV1E5P3PBQpjMJIVrxeRAq4RCYMEzlqWY24Jltqstcp3uV79moaJc63d4cf/pub?gid=0&single=true&output=csv";</script>
+<script>window.__PV6_SHEETS_MOV_URL__="https://docs.google.com/spreadsheets/d/e/2PACX-1vR_Rp6f-Xdv6RyWXQhY0uV1E5P3PBQpjMJIVrxeRAq4RCYMEzlqWY24Jltqstcp3uV79moaJc63d4cf/pub?gid=0&single=true&output=csv";</script>
 <script src="pv6_mov_remote_patch.js?v=3.0"></script>
 
 <!-- Núcleo -->
 <script src="app.v6.js?v=V6"></script>
 
-<!-- Addon manejo PV6 -->
-<script src="pv6_m2_addon_v216.js?v=3.0"></script>
+<!-- Addon manejo PV6 (inline, panel flotante) -->
+<script>
+// PV6 Manejo — M2.17 (FLOATING PANEL)
+(function(){
+  let started=false;
+  function ready(){return (typeof window!=='undefined')&&window.state&&document.body;}
+  function parseDate(s){try{return new Date(s+'T00:00:00')}catch(_){return new Date()}}
+  const lastOnOrBefore=(arr,d,key)=>{if(!arr)return null;for(let i=arr.length-1;i>=0;i--){const di=parseDate(arr[i].date||arr[i].fecha||arr[i].d);if(di<=d&&arr[i][key]!=null)return arr[i][key]}return null};
+  function lastDateAvailable(S){if(S.end)return S.end;try{const series=window.series||new Map();for(const[,a]of series){for(let i=a.length-1;i>=0;i--){const dd=a[i].date||a[i].fecha||a[i].d||null;if(dd)return dd}}}catch(_){ }const t=new Date(),m=String(t.getMonth()+1).padStart(2,'0'),d=String(t.getDate()).padStart(2,'0');return `${t.getFullYear()}-${m}-${d}`}
+  function getUA(nm,dEnd,moves){const m=moves.get(nm)||[];let ua=lastOnOrBefore(m,dEnd,'UA')??lastOnOrBefore(m,dEnd,'UA_ef')??lastOnOrBefore(m,dEnd,'UA_efectiva');if(ua==null){const N=lastOnOrBefore(m,dEnd,'N')??lastOnOrBefore(m,dEnd,'N_total');if(N!=null)ua=N/10}return ua||0}
+  const daysFDN=f=>(!f||!isFinite(f)||f<=0)?null:120/((f<=1)?f*100:f);
+  function calcRow(nm,ds,ctx){const{AREAS,FND,moves,kgFor,S}=ctx;const dEnd=parseDate(ds),area=AREAS.get(nm)||0,kg=kgFor(nm,ds),fnd=FND.has(nm)?FND.get(nm):null,UA=getUA(nm,dEnd,moves),uso=(S.coefUso??60)/100,base=S.consumo??10,oferta=(kg||0)*area*uso,demanda=(UA||0)*base,Dbr=(oferta>0&&demanda>0)?(oferta/demanda):null;const Dfdn=daysFDN(fnd),beta=S.params?.beta??0.05,wmax=S.params?.wmax??0.30,delta=(Dfdn==null)?null:Math.min(wmax,beta*Dfdn),Daj=(Dbr==null&&Dfdn==null)?null:(Dbr==null)?Math.max(0,Dfdn-(delta||0)):(Dfdn==null)?Dbr:Math.max(Dbr,Dfdn-(delta||0));const Emin=S.params?.Emin??2000,Emax=S.params?.Emax??3200,Smin=S.params?.Smin??1600,estado=(kg==null)?-1:(kg>=Emin&&kg<=Emax)?1:(kg>=Smin?0:-1);return{nm,kg,Dbr,Dfdn,delta,Daj,estado}}
+  function buildUI(){let card=document.getElementById('pv6-manejo-floating');if(!card){card=document.createElement('section');card.id='pv6-manejo-floating';card.style.cssText='position:fixed;right:12px;bottom:12px;width:520px;max-height:60vh;overflow:auto;background:#fff;border:1px solid #e5e7eb;box-shadow:0 10px 25px rgba(0,0,0,.12);border-radius:16px;z-index:9999;';card.innerHTML='<div style="display:flex;align-items:center;justify-content:space-between;padding:10px 14px;border-bottom:1px solid #eceff3"><h3 style="margin:0;font-size:16px">Pastoreo con manejo (PV6)</h3><div id="pv6-m2-status" style="font-size:12px;color:#6b7a8c">—</div></div><div style="padding:8px 12px"><div class="table-wrap" style="max-height:44vh;overflow:auto"><table class="rank" style="width:100%"><thead><tr><th style="text-align:left">Potrero</th><th>Kg MS/ha</th><th>Días br.</th><th>Días FDN</th><th>Δ desperd. (d)</th><th>Días aj.</th><th>Estado</th></tr></thead><tbody id="pv6-m2-body"></tbody></table></div></div>';document.body.appendChild(card)}}
+  function refreshUI(ctx){const{S,selectedParents,kgFor}=ctx,ds=S.end||lastDateAvailable(S),fuente=(S.fuente==='raw')?'kgms_raw':'kgms_7d',st=document.getElementById('pv6-m2-status');if(st)st.textContent=`[M2.17] listo — fuente: ${fuente} hasta: ${ds}`;const body=document.getElementById('pv6-m2-body');if(!body)return;const padres=selectedParents().filter(n=>!n.toLowerCase().startsWith('z'));const rows=padres.map(nm=>({nm,kg:kgFor(nm,ds)||0})).sort((a,b)=>b.kg-a.kg);body.innerHTML='';rows.forEach(r=>{const x=calcRow(r.nm,ds,ctx),fmt=n=>(n==null||!isFinite(n))?'–':(Math.round(n*10)/10).toLocaleString('es-CO'),estadoTxt=x.estado===1?'<span class="state green">Verde</span>':x.estado===0?'<span class="state yellow">Amarillo</span>':'<span class="state red">Rojo</span>';const tr=document.createElement('tr');tr.innerHTML=`<td style="text-align:left">${x.nm}</td><td>${x.kg==null?'–':Math.round(x.kg).toLocaleString('es-CO')}</td><td>${fmt(x.Dbr)}</td><td>${fmt(x.Dfdn)}</td><td>${fmt(x.delta)}</td><td>${fmt(x.Daj)}</td><td>${estadoTxt}</td>`;body.appendChild(tr)})}
+  function attach(){if(started||!ready())return;started=true;const S=window.state,ctx={S,AREAS:window.AREAS||new Map(),FND:window.FND||new Map(),moves:window.moves||new Map(),kgFor:window.kgFor||((nm,ds)=>null),selectedParents:window.selectedParents||(()=>[])};buildUI();refreshUI(ctx);['date-end','fuente','coef-uso','consumo','mode','btn-apply'].forEach(id=>{const el=document.getElementById(id);if(!el)return;if(id==='btn-apply')el.addEventListener('click',()=>refreshUI(ctx));else el.addEventListener('change',()=>refreshUI(ctx))})}
+  const iv=setInterval(()=>{try{attach();if(started)clearInterval(iv)}catch(_){}} ,250);setTimeout(()=>{clearInterval(iv);try{attach()}catch(_){}} ,9000);
+})();
+</script>
 
 </body>
 </html>
