--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 <!-- Núcleo -->
 <script src="app.v6.js?v=V6"></script>
 
-<!-- Addon manejo PV6 (inline, detector robusto de Ranking) -->
+<!-- Addon manejo PV6 (inline, auto-scroll + observer para Ranking) -->
 <script>
 (function(){
   function ensurePanel(){
@@ -276,81 +276,69 @@
   function fmt(n){ return (n==null||!isFinite(n)) ? '–' : (Math.round(n*10)/10).toLocaleString('es-CO'); }
   function daysFDN(f){ if (f==null||!isFinite(f)||f<=0) return null; const pct=(f<=1)?f*100:f; return 120/pct; }
 
-  // 1) Intenta ubicar por título exacto/cercano
+  function findRankingHeader(){
+    const match=/ranking\s+de\s+potreros/i;
+    const nodes=[...document.querySelectorAll('h1,h2,h3,h4,.card-header,.card-title,[class*="heading"],[data-title]')];
+    return nodes.find(el=>match.test((el.textContent||'').trim()))||null;
+  }
   function findRankingContainer(){
-    const match = /ranking\s+de\s+potreros/i;
-    const candidates = Array.from(document.querySelectorAll('h1,h2,h3,h4,.card-header,.card-title,[class*="heading"],[data-title]'));
-    let h = candidates.find(el => match.test((el.textContent||'').trim()));
-    if (h) {
-      let container = h.closest('section, .card, .widget, .panel, div');
-      if (container) return container;
+    const hdr=findRankingHeader();
+    if (hdr){
+      const cont = hdr.closest('section, .card, .widget, .panel, div') || hdr.parentElement;
+      if (cont) return cont;
     }
-    // 2) Fallback: busca una tabla con cabeceras esperadas
-    const tables = Array.from(document.querySelectorAll('table'));
+    // Fallback por cabeceras
+    const tables=[...document.querySelectorAll('table')];
     for (const t of tables){
-      const ths = Array.from(t.querySelectorAll('thead th, thead td, tbody tr:first-child th, tbody tr:first-child td')).map(x=>(x.textContent||'').trim().toLowerCase());
-      const hasPotrero = ths.some(x=>/potrero/.test(x));
-      const hasKg = ths.some(x=>/kg\s*ms\/?ha/i.test(x) || /kgms\/?ha/i.test(x));
-      const hasFND = ths.some(x=>/fnd/i.test(x));
-      if (hasPotrero && hasKg && hasFND) return t.closest('section, .card, .widget, .panel, div') || t.parentElement;
+      const ths=[...t.querySelectorAll('thead th, thead td, tbody tr:first-child th, tbody tr:first-child td')].map(x=>(x.textContent||'').trim().toLowerCase());
+      const ok = ths.some(x=>/potrero/.test(x)) && ths.some(x=>/kg\s*ms\/?ha|kgms\/?ha/i.test(x)) && ths.some(x=>/fnd/.test(x));
+      if (ok) return t.closest('section, .card, .widget, .panel, div')||t.parentElement;
     }
     return null;
   }
-
-  // Extrae filas {nm, kg, fnd} desde el contenedor/tabla del ranking
   function readRanking(container){
     const table = container.querySelector('table') || container;
-    const rows = [];
-    Array.from(table.querySelectorAll('tbody tr')).forEach(tr=>{
-      const tds = tr.querySelectorAll('td,th');
-      if (tds.length<3) return;
-      const nm = (tds[0].textContent||'').trim();
-      // intenta encontrar columnas por heurística
-      const txts = Array.from(tds).map(td=>(td.textContent||'').trim());
-      // Kg en segunda columna típicamente
-      const kgTxt = (txts[1]||'').replace(/[^\d.,-]/g,'').replace(/\.(?=\d{3}\b)/g,'').replace(',', '.');
-      // FND suele estar en la cuarta; si no, prueba cualquier col con %
-      let fndTxt = (txts[3]||'');
-      if (!/%/.test(fndTxt)) fndTxt = (txts.find(x=>/%/.test(x))||'');
-      fndTxt = fndTxt.replace(/[^\d.,-]/g,'').replace(/\.(?=\d{3}\b)/g,'').replace(',', '.');
-      const kg = kgTxt? parseFloat(kgTxt): null;
-      const fnd = fndTxt? parseFloat(fndTxt): null;
-      if (nm) rows.push({nm, kg, fnd});
+    const rows=[];
+    [...table.querySelectorAll('tbody tr')].forEach(tr=>{
+      const tds=tr.querySelectorAll('td,th'); if (tds.length<3) return;
+      const nm=(tds[0].textContent||'').trim();
+      const getNum=t=>t.replace(/[^\d.,-]/g,'').replace(/\.(?=\d{3}\b)/g,'').replace(',', '.');
+      const txts=[...tds].map(td=>(td.textContent||'').trim());
+      const kg = txts[1] ? parseFloat(getNum(txts[1])) : null;
+      let fndStr = txts[3]||'';
+      if(!/%/.test(fndStr)) fndStr = (txts.find(x=>/%/.test(x))||'');
+      const fnd = fndStr ? parseFloat(getNum(fndStr)) : null;
+      if (nm) rows.push({nm,kg,fnd});
     });
     return rows;
   }
 
   function renderFromRanking(){
-    const status = document.getElementById('pv6-m2-status');
-    const body = document.getElementById('pv6-m2-body');
-    if (!status || !body) return false;
+    const status=document.getElementById('pv6-m2-status');
+    const body=document.getElementById('pv6-m2-body');
+    if (!status||!body) return false;
 
-    const container = findRankingContainer();
-    if (!container){
-      status.textContent = 'buscando ranking…';
-      return false;
-    }
-    const rows = readRanking(container);
+    const cont=findRankingContainer();
+    if (!cont){ status.textContent='buscando ranking…'; return false; }
+
+    const table=cont.querySelector('table')||cont;
+    const rows=readRanking(cont);
     if (!rows.length){
-      status.textContent = 'ranking encontrado, esperando filas…';
+      status.textContent='ranking encontrado, esperando filas…';
       return false;
     }
 
-    status.textContent = '[M2.17] listo — fuente: ranking (DOM)';
-    body.innerHTML = '';
+    status.textContent='[M2.17] listo — fuente: ranking (DOM)';
+    body.innerHTML='';
     rows.slice(0,30).forEach(r=>{
-      const Dfdn = daysFDN(r.fnd);
-      const beta = 0.05, wmax = 0.30;
-      const delta = (Dfdn==null)? null : Math.min(wmax, beta*Dfdn);
-      const Dbr = null; // sin UA/área aquí
-      const Daj = (Dfdn==null) ? null : Math.max(0, Dfdn - (delta||0));
-      const estadoTxt = (r.kg==null) ? '–'
-        : (r.kg>=2000 && r.kg<=3200) ? '<span class="state green">Verde</span>'
-        : (r.kg>=1600) ? '<span class="state yellow">Amarillo</span>'
-        : '<span class="state red">Rojo</span>';
-
-      const tr = document.createElement('tr');
-      tr.innerHTML = `<td style="text-align:left;padding:6px 4px">${r.nm}</td>
+      const Dfdn=daysFDN(r.fnd);
+      const beta=0.05, wmax=0.30;
+      const delta=(Dfdn==null)?null:Math.min(wmax,beta*Dfdn);
+      const Dbr=null; // sin UA/área aquí
+      const Daj=(Dfdn==null)?null:Math.max(0,Dfdn-(delta||0));
+      const estadoTxt=(r.kg==null)?'–':(r.kg>=2000&&r.kg<=3200)?'<span class="state green">Verde</span>':(r.kg>=1600)?'<span class="state yellow">Amarillo</span>':'<span class="state red">Rojo</span>';
+      const tr=document.createElement('tr');
+      tr.innerHTML=`<td style="text-align:left;padding:6px 4px">${r.nm}</td>
         <td style="padding:6px 4px">${r.kg==null?'–':Math.round(r.kg).toLocaleString('es-CO')}</td>
         <td style="padding:6px 4px">${fmt(Dbr)}</td>
         <td style="padding:6px 4px">${fmt(Dfdn)}</td>
@@ -362,17 +350,34 @@
     return true;
   }
 
+  function ensureVisibleAndObserve(){
+    const hdr=findRankingHeader();
+    if (hdr) { try{ hdr.scrollIntoView({behavior:'smooth', block:'center'}); }catch(_){ window.scrollBy(0,500); } }
+    const cont=findRankingContainer();
+    if (!cont) return null;
+
+    // Observa aparición de filas en la tabla
+    const table=cont.querySelector('table')||cont;
+    const target=table.querySelector('tbody')||table;
+    const mo=new MutationObserver(()=>renderFromRanking());
+    mo.observe(target,{childList:true,subtree:true});
+    return mo;
+  }
+
   function start(){
     ensurePanel();
-    const iv = setInterval(()=>{ if (renderFromRanking()) clearInterval(iv); }, 400);
+    const mo=ensureVisibleAndObserve();
+    // reintenta hasta llenar
+    const iv=setInterval(()=>{ if (renderFromRanking()) clearInterval(iv); }, 400);
     setTimeout(()=>clearInterval(iv), 15000);
-    // reintenta al cambiar controles
+    // recalcular en cambios de controles
     ['date-end','fuente','coef-uso','consumo','mode','btn-apply'].forEach(id=>{
-      const el=document.getElementById(id);
-      if (!el) return;
-      const ev = (id==='btn-apply')?'click':'change';
-      el.addEventListener(ev, ()=>renderFromRanking());
+      const el=document.getElementById(id); if(!el) return;
+      const ev=(id==='btn-apply')?'click':'change';
+      el.addEventListener(ev, ()=>{ ensureVisibleAndObserve(); renderFromRanking(); });
     });
+    // también al hacer scroll (por si el ranking está fuera de vista)
+    window.addEventListener('scroll', ()=>renderFromRanking(), {passive:true});
   }
 
   if (document.readyState==='loading') document.addEventListener('DOMContentLoaded', start);
